# purmisia

./: .gitignore  AUTHORS  LICENSE  README.md  pyproject.toml
denerc/: __init__.py  __main__.py  errors.py
denerc/user/lexer/: tokenizer.py
dodoc/: __init__.py  __main__.py  errors.py
dodoc/user/lexer/: tokenizer.py
