[tool.poetry]
name = "dodoc"
version = "0.1.0"
description = ""
authors = ["VincentRPS <vincentbusiness55@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.10"
llvmlite = "^0.38.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
